Prevent Scheduler column misalignment due to different TH font size

--- a/styles/web/kendo.common.less
+++ b/styles/web/kendo.common.less
@@ -3917,6 +3917,7 @@ div.k-slider
 {
     height:1.5em;
     padding:.334em .5em;
+    font-size: 100%;
 }
 
 .k-scheduler-monthview .k-hidden,
